--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "eject": "react-scripts eject",
     "test-coverage": "react-scripts test --coverage --watchAll=false",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js, .jsx",
-    "lint:styles": "npx stylelint '**/*.css'"
+    "lint:styles": "npx stylelint '**/*.css'",
+    "coverage": "nyc report --reporter=html"
   },
   "eslintConfig": {
     "extends": "react-app"
